--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@
   body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   img, picture, video, canvas, svg {
