--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@
 /* top nav */
 .top-nav{
   background-color: black;
-  border-bottom: 5px solid rgb(55, 95, 180);
+  border-bottom: 5px solid rgb(41, 95, 76);
 }
 .top-nav li {
     display: inline;
@@ -60,23 +60,26 @@ width: 90vw;
 margin: auto;
 }
 svg{
-  padding: 20px;
+  padding: 30px 30px 30px 15px;
+border-right: solid black 1px;
 }
 .bottom-nav{
   color: black;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 14px;
-  padding-top: 20px;
+  padding-top: 35px;
   font-weight: bold;
   margin-left: -20px;
   letter-spacing: 2px;
 }
 .bottom-nav li{
   display: inline;
-  padding: 5px;
 }
 li:hover{
-  background-color: rgb(55, 95, 180);
-  color: white;
+  color: rgb(190, 45, 45);
+}
+.header-mid{
+  display: flex;
+justify-content: left;
 }
