--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@
     overflow-wrap: break-word;
   }
 /* actual css code */
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,700;1,900&display=swap');
 /* top nav */
 .top-nav{
   background-color: black;
@@ -47,6 +47,7 @@ a.web-links {
   text-align: left;
   padding: 2.5px;
   font-weight: 4px;
+  
 }
 a.web-links :visited{
   color: #cccccc;
@@ -54,12 +55,11 @@ a.web-links :visited{
 a.web-links:hover{
   background-color: rgb(58, 58, 58);
 }
-/* body of webpage */
-.container {
-width: 90vw;
-margin: auto;
+/* bottom nav */
+.header-mid{
+  background-color: rgb(221, 221, 227);
 }
-svg{
+ .logo{
   padding: 30px 30px 30px 15px;
 border-right: solid black 1px;
 }
@@ -71,15 +71,38 @@ border-right: solid black 1px;
   padding-top: 35px;
   font-weight: bold;
   margin-left: -20px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 .bottom-nav li{
   display: inline;
+  padding-right: 10px;
 }
 li:hover{
   color: rgb(190, 45, 45);
 }
 .header-mid{
   display: flex;
-justify-content: left;
+  justify-content: left;
 }
+/* container */
+.container {
+  width: 90vw;
+  margin: auto;
+  padding: 20px;
+  }
+  .articles{
+    display: flex;
+    flex-wrap: wrap;
+    width: 70vw;
+  }
+  .headline-article h1{
+    padding-top: 10px;
+    font-family: Helvetica;
+    line-height: 35px;
+    letter-spacing: -1px;
+  }
+  .bottom-articles{
+    display: flex;
+    flex-direction: row;
+    padding-top: 20px;
+  }
