--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@
   
   html, body {
     height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
   }
 
   
@@ -74,7 +75,7 @@ border-right: solid black 1px;
   padding-right: 10px;
 }
 li:hover{
-  color: rgb(190, 45, 45);
+  color: #be2d2d;
 }
 
 .header-mid{
@@ -82,3 +83,49 @@ li:hover{
   justify-content: left;
 }
 /* container */
+.container{
+  width: 95vw;
+}
+.top-container{
+  display: flex;
+}
+
+/* main article CSS */
+.main-article{
+  max-width: 60%;
+  margin: 20px;
+  padding-right: 10px;
+  flex-basis: calc(75% - 20px);
+  border-right: 1px solid #cccccc;
+}
+.main-article img{
+  width: 100%;
+}
+.main-article h1{
+  margin-bottom: 10px;
+}
+.main-article h3{
+  margin-bottom: 10px;
+}
+/* latest */
+.right-side{
+display: block;
+flex-basis: 25%;
+margin-top: 15px;
+}
+.latest{
+  margin-bottom: 10px;
+  font-style: italic;
+}
+.latest-text h2{
+  font-size: 1.25em;
+  margin-bottom: 10px;
+}
+.latest-text p{
+  margin-bottom: 10px;
+}
+.latest-text h4{
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #cccccc;
+}
